Fix regression from #7e5ba9f that caused the text field in the condition block to be too large

--- a/src/main/resources/css/canvas/node/usersetting/DevicePropertyWindow.css
+++ b/src/main/resources/css/canvas/node/usersetting/DevicePropertyWindow.css
@@ -134,6 +134,15 @@
     -fx-min-height: 25;
     -fx-max-height: 25;
 }
+
+.rangeSliderTextField {
+    -fx-max-width: 50;
+}
+
+.rangeSliderTextField:focused {
+    -fx-max-width: 50;
+}
+
 .spinner{
     -fx-border-color : #cccccc;
     -fx-border-radius : 3;
